--- a/src/components/CustomEditor/CustomEditor.scss
+++ b/src/components/CustomEditor/CustomEditor.scss
@@ -40,7 +40,8 @@
       &_active {
         background-color: #eaeaff;
 
-        pre {
+        pre,
+        p {
           background-color: #eaeaff;
         }
       }
