--- a/src/components/DropList/DropList.scss
+++ b/src/components/DropList/DropList.scss
@@ -29,7 +29,7 @@
     }
 
     &:hover {
-      background: color-mix(in srgb,var(--item-color),#000 10%)
+      background: color-mix(in srgb, var(--item-color), #000 10%);
     }
   }
 
@@ -44,19 +44,19 @@
 
   &::-webkit-scrollbar-track {
     border-radius: 10px;
-    background: rgba(0,0,0,0.1);
+    background: rgba(0, 0, 0, 0.1);
   }
 
-  &::-webkit-scrollbar-thumb{
+  &::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: rgba(0,0,0,0.2);
+    background: rgba(0, 0, 0, 0.2);
   }
 
-  &::-webkit-scrollbar-thumb:hover{
-    background: rgba(0,0,0,0.4);
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgba(0, 0, 0, 0.4);
   }
-  
-  &::-webkit-scrollbar-thumb:active{
-    background: rgba(0,0,0,.9);
+
+  &::-webkit-scrollbar-thumb:active {
+    background: rgba(0, 0, 0, 0.9);
   }
 }
