fix bug with droplist and update item in list

--- a/src/components/DropList/DropList.scss
+++ b/src/components/DropList/DropList.scss
@@ -49,6 +49,7 @@
     &_one-line {
       border-top: 0px;
       width: max-content;
+      min-width: calc(100% - 16px);
 
       &-wrap {
         @include scroll;
