--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -1,5 +1,30 @@
 @import url('https://rsms.me/inter/inter.css');
 
+@mixin scroll {
+  &::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+
+  &::-webkit-scrollbar-track {
+    border-radius: 10px;
+    background: rgba(191, 199, 213, .1);
+  }
+
+  &::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgba(191, 199, 213, .2);
+  }
+
+  &::-webkit-scrollbar-thumb:hover {
+    background: rgba(191, 199, 213, .4);
+  }
+
+  &::-webkit-scrollbar-thumb:active {
+    background: rgb(191, 199, 213);
+  }
+}
+
 body {
   position: relative;
   max-width: 1200px;
@@ -29,10 +54,14 @@ p {
 }
 
 pre {
+  @include scroll;
+
   padding: 0;
   margin: 0;
   color: rgb(191, 199, 213);
   background-color: rgb(41, 45, 62);
+  overflow-x: auto;
+  overflow-y: hidden;
 
   &.public-DraftStyleDefault-pre {
     background-color: transparent;
