--- a/src/components/DropList/DropList.scss
+++ b/src/components/DropList/DropList.scss
@@ -30,7 +30,7 @@
   position: absolute;
   list-style-type: none;
   background: white;
-  padding-left: 0;
+  padding: 0;
   border: 3px solid currentColor;
   margin-top: 0;
   width: calc(100% - 6px);
