--- a/src/assets/main.scss
+++ b/src/assets/main.scss
@@ -8,16 +8,16 @@
 
   &::-webkit-scrollbar-track {
     border-radius: 10px;
-    background: rgba(191, 199, 213, .1);
+    background: rgba(191, 199, 213, 0.1);
   }
 
   &::-webkit-scrollbar-thumb {
     border-radius: 10px;
-    background: rgba(191, 199, 213, .2);
+    background: rgba(191, 199, 213, 0.2);
   }
 
   &::-webkit-scrollbar-thumb:hover {
-    background: rgba(191, 199, 213, .4);
+    background: rgba(191, 199, 213, 0.4);
   }
 
   &::-webkit-scrollbar-thumb:active {
@@ -37,10 +37,18 @@ body {
   margin-right: auto;
   padding: 50px 50px 100px 50px;
   font-family: 'Inter', sans-serif;
+
+  @media (max-width: 480px) {
+    padding: 20px 20px 80px 20px;
+  }
 }
 
 main {
   margin-top: 25px;
+
+  @media (max-width: 480px) {
+    margin-top: 15px;
+  }
 }
 
 img {
